tests/ui/snapshots/ui__test_bookmark__bookmark_view_empty.snap
---
source: tests/ui/test_bookmark.rs
expression: out
---
"┌─────────────────────────────── Bookmarks (0) ────────────────────────────────┐"
"│No bookmarks found                                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [?] Help   [n] Create   [u] Undo   [^R] Redo   [^L] Refresh   [q] Back         "
