tests/ui/snapshots/ui__test_bookmark__bookmark_view_three_groups_styles.snap
---
source: tests/ui/test_bookmark.rs
expression: render_with_styles(&mut app)
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 16 },
    content: [
        "┌─────────────────────────────── Bookmarks (6) ────────────────────────────────┐",
        "│  ── Local ──                                                                 │",
        "│  feature-x                       vwxyzabc  wip: refactor                     │",
        "│  main                            kxryzmor  feat: add parser                  │",
        "│  orphan                                    (no description)                  │",
        "│  ── Remote (tracked) ──                                                      │",
        "│  main@origin                                                                 │",
        "│  ── Remote (untracked) ──                                                    │",
        "│  feature-y@origin                                                            │",
        "│  main@upstream                                                               │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        " [?] Help   [n] Create   [Enter] Jump   [d] Delete   [r] Rename   [f] Forget    ",
        "                                                                                ",
        " [m] Move   [u] Undo   [^R] Redo   [^L] Refresh   [q] Back                      ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: White, bg: Indexed(24), underline: Reset, modifier: BOLD,
        x: 33, y: 2, fg: Yellow, bg: Indexed(24), underline: Reset, modifier: BOLD,
        x: 45, y: 2, fg: White, bg: Indexed(24), underline: Reset, modifier: BOLD,
        x: 58, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Black, bg: Cyan, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 23, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 38, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 13, fg: Black, bg: Red, underline: Reset, modifier: NONE,
        x: 51, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 13, fg: Black, bg: Yellow, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 13, fg: Black, bg: Red, underline: Reset, modifier: NONE,
        x: 77, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Black, bg: Yellow, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 21, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 15, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 33, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 15, fg: Black, bg: Blue, underline: Reset, modifier: NONE,
        x: 48, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 15, fg: Black, bg: Red, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 0 }
}, cursor: false, pos: (0, 0) }
